objects/tffa__Party__c.object
<CustomObject>
    <fields>
        <fullName>tffa__SecondaryPhoneType__c</fullName>
        <description>The type of the Secondary phone</description>
        <label>Secondary phone type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__PhoneType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__SecondaryPhoneVerificationMethod__c</fullName>
        <description>Secondary phone verification method, usually OTP , Manual or KYC</description>
        <label>Secondary Phone Verification Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__PhoneVerificationMethodType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__SecondaryPhoneVerifiedOn__c</fullName>
        <description>The date and time of verification of secondary phone</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Secondary Phone Verified on</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>tffa__SecondaryPhone__c</fullName>
        <description>Secondary phone of the party.</description>
        <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
        <label>Secondary phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Segment__c</fullName>
        <description>By Customer Segments is meant the different groups of people or organizations an enterprise aims to reach and serve. This field captures segment code.</description>
        <label>Segment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__PartySegment</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__SessionExpired__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether session is expired for the current applicant</description>
        <label>Session expired</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__SessionExpiresOn__c</fullName>
        <description>Datetime value on which session expires for the current party</description>
        <encryptionScheme>None</encryptionScheme>
        <label>SessionExpiresOn</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>tffa__SessionToken__c</fullName>
        <description>Holds encrypted value of session token for the party</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Session token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__SpousalVABenefitsEligibilityIndicator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When true, indicates that the individual is a surviving spouse of a Veteran who served and was Missing In Action (MIA) /Killed In Action (KIA), a Veteran who died of a condition or impairment connected to his/her service in the Armed Forces (as determined by VA or DoD), or a Veteran whose service connected disability/impairment, they believe, entitles them to benefits from the VA.</description>
        <label>Spousal vabenefits eligibility indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__Suffix__c</fullName>
        <description>The name suffix of the individual represented by the parent object. (E.g., JR = Junior, SR = Senior, etc.)</description>
        <label>Suffix</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__Suffix</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__Theme__c</fullName>
        <description>The UX theme applied for this submission, useful for tracking, same value as UXStrategyCode__c</description>
        <encryptionScheme>None</encryptionScheme>
        <label>UX Theme</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__TotalAssetValue__c</fullName>
        <description>The total assets owned. This typically includes all tangible fixed assets and current assets.</description>
        <label>Total asset value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>tffa__TotalLiabilityValue__c</fullName>
        <description>The total amount of liabilitie which would include loans, accounts payable, mortgages and any form of accrued expenses.</description>
        <label>Total liability value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>tffa__TotalMonthlyExpense__c</fullName>
        <description>The aggregated value of all expenses over 1 month.</description>
        <label>Total monthly expense</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>tffa__TotalMonthlyIncome__c</fullName>
        <description>The aggregated value of all income in 1 month.</description>
        <label>Total monthly income</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>tffa__TrustType__c</fullName>
        <description>Type/class of trust based on their purpose</description>
        <label>Trust type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__TrustType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__Type__c</fullName>
        <description>Type of the party. Allowed values are - INDIVIDUAL, ORGANIZATION</description>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__PartyType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__UrlFragment__c</fullName>
        <description>Fragment of the URL in encrypted form which is associated with party to identify a unique application access URL</description>
        <encryptionScheme>None</encryptionScheme>
        <label>URL fragment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Url__c</fullName>
        <description>URL in encrypted form which is associated with party to identify a unique application access URL and generated as part of OTP authentication flow</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Url</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>tffa__Website__c</fullName>
        <description>Public website of the organization</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Website</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Party</label>
    <listViews>
        <fullName>Parties_Under_Review_Status</fullName>
        <columns>NAME</columns>
        <columns>FISLastName__c</columns>
        <columns>tffa__IsExistingCustomer__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>tffa__Prefilled__c</columns>
        <columns>IsDobMatch__c</columns>
        <columns>tffa__BirthDate__c</columns>
        <columns>FISDob__c</columns>
        <columns>tffa__IDVStatus__c</columns>
        <columns>tffa__IDAStatus__c</columns>
        <columns>tffa__KYCDecisionOutcome__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>tffa__KYCDecisionOutcome__c</field>
            <operation>equals</operation>
            <value>REVIEW</value>
        </filters>
        <label>Parties Under Review Status</label>
        <sharedTo>
            <group>Deposit_Operations</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>tffa__All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATED_DATE</columns>
        <columns>tffa__BrandCode__c</columns>
        <columns>CostCenter__c</columns>
        <columns>Customer_Number__c</columns>
        <columns>IsAuthenticatedCustomer__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>tffa__AdverseActionNoticeRequired__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>tffa__INDIVIDUALS</fullName>
        <columns>NAME</columns>
        <columns>tffa__PrimaryEmail__c</columns>
        <columns>tffa__PrimaryPhone__c</columns>
        <columns>tffa__BirthDate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>tffa__Type__c</field>
            <operation>equals</operation>
            <value>INDIVIDUAL</value>
        </filters>
        <label>Individuals</label>
    </listViews>
    <listViews>
        <fullName>tffa__ORGANIZATIONS</fullName>
        <columns>NAME</columns>
        <columns>tffa__OrganizationType__c</columns>
        <columns>tffa__PrimaryPhone__c</columns>
        <columns>tffa__PrimaryEmail__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>tffa__Type__c</field>
            <operation>equals</operation>
            <value>ORGANIZATION</value>
        </filters>
        <label>Organizations</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Party Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Parties</pluralLabel>
    <recordTypes>
        <fullName>tffa__INDIVIDUAL</fullName>
        <active>true</active>
        <description>A person who interacts with the bank for financial accounts and services</description>
        <label>Individual</label>
    </recordTypes>
    <recordTypes>
        <fullName>tffa__ORGANIZATION</fullName>
        <active>true</active>
        <description>A  legal entity formed by a group of individuals to engage in and operate a business enterprise. It may be organized in various ways for tax and financial liability purposes depending on the corporate law of its jurisdiction.</description>
        <label>Organization</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>